<resources>
    <string name="app_name" translatable="false">PharmaScouter</string>

    <!-- HomeFragment Strings -->
    <string name="lastUpdates">Latest updates on medicines</string>
    <!-- DrugsFragment Strings -->
    <string name="searchingDrugs">Searching for drugs. This may take a wile</string>
    <string name="NoResults">No results found, try again</string>
    <string name="barHint">Search drugs by name</string>
    <string name="noInfo">No information found</string>
    <!-- DrugFragmentUMLS Strings -->
    <string name="causes">This drug has relation with this causes</string>
    <string name="isa">This drug is known as</string>
    <string name="definition">Definition</string>
    <!-- InteractionFragment Strings -->
    <string name="searchingInteractions">Searching for interactions. This may take a wile</string>
    <string name="NoInteractions">No interactions found, try again or try another drug</string>
    <string name="showing" translatable="false">Showing interactions of </string>
    <string name="descriptionDrug" translatable="false">Drug description of</string>
    <!-- General Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <!-- Dialog profile -->
    <string name="nameHint">Insert your name</string>
    <string name="SelectARole">Select a role</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="patient">Patient</string>
    <string name="other">Other</string>
    <string name="dialogTitle">Complete your profile before starting</string>
    <!-- Dialogs RecyclerViews -->
    <string name="titleDialogDrugs">Add drug to favourites?</string>
    <string name="titleDialogFavourites">Delete drug from favourites?</string>
    <string name="titleDialogSettings">Clear Favourites List?</string>
    <string name="dialogDrugsDescription">Click accept to add the selected drug to
                                            favourites</string>
    <string name="dialogFavouritesDescription">Click accept to delete the selected drug from
                                                favourites</string>
    <string name="dialogSettings">Click Accept if you want to delete all elements from your
                                    favourites list</string>
    <!-- String Fragment Settings -->
    <string name="yourProfile">Your profile</string>
    <string name="yourProfileNameSummary">Insert your name</string>
    <string name="yourProfileNameTitle">Name</string>
    <string name="yourProfileRoleTitle">Role</string>
    <string name="yourProfileRoleSummary">Select your role</string>
    <string name="about">About</string>
    <string name="aboutTitle">App information</string>
    <string name="aboutSummary">See App information details</string>
    <string name="database">Database</string>
    <string name="listTitle">Clear favourites list</string>
    <string name="listSummary">Delete all elements from favourites list</string>
    <!-- Strings MedPS -->
    <string name="nationalCode">National code:</string>
    <string name="name">Name:</string>
    <string name="typeof">Type of supply problem:</string>
    <string name="startDate">Start date:</string>
    <string name="endDate">End date:</string>
    <string name="active">Active:</string>
    <string name="remarks">Remarks:</string>
    <!-- Strings MedRC -->
    <string name="changeType">Change type:</string>
    <string name="change">Change:</string>
    <!-- String Med-->
    <string name="nregister">Register number:</string>
    <string name="titularLab">Titular Lab:</string>
    <string name="cpresc">Prescription conditions:</string>
    <string name="state">State:</string>
    <string name="commercialised">Commercialised</string>
    <string name="prescription">Prescription</string>
    <string name="generic">Generic</string>
    <string name="dosage">Dosage:</string>
    <string name="driving">Affects driving</string>
    <string name="triangle">Black triangle</string>
    <string name="orphan">Orphan drug</string>
    <string name="biosimilar">Biosimilar</string>
    <string name="non_replaceable">Non-replaceable:</string>
    <string name="psum">Supply problems</string>
    <string name="notes">Notes</string>
    <string name="materialsInf">Computer security materials</string>
    <string name="ema">EMA registered</string>
    <string name="docs">Documents:</string>
    <string name="administration_ways">Ways of administration:</string>
    <string name="dosage_form">Dosage form:</string>
    <string name="simple_dosage_form">Simple dosage form:</string>
    <string name="vtm">Alias:</string>
    <!-- String About -->
    <string name="appCreated">App created by:</string>
    <string name="contact">Contact:</string>
    <string name="description">This application was created to develop the final masters thesis
                                with the theme of creating an APP that uses Linked Open Data to
                                provide information to patients about medicines. </string>
    <!-- Strings Fragment names -->
    <string name="home">Home</string>
    <string name="searchDrugs">Search Drugs</string>
    <string name="interactionCh">Interaction Checker</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <!-- Activity Names -->
    <string name="drug">Drug</string>
    <!-- Warning dialog -->
    <string name="warning">Warning</string>
    <string name="warningDesc">This section provides information that may be overwhelming for people
                                without pharmaceutical or medical knowledge, so use with caution.
                                Before making any changes to your medication through the application,
                                please consult your general practitioner.</string>
    <string name="cb">Do not show again</string>
    <!-- View Pager tabs -->
    <string name="supplyProb">SUPPLY PROBLEMS</string>
    <string name="changelog">CHANGELOG</string>
    <string name="generalInfo">GENERAL INFORMATION</string>
    <string name="moreInfo">MORE INFO</string>
</resources>