<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_drugs"
        android:icon="@drawable/ic_drugs"
        android:title="@string/searchDrugs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_interactions"
        android:icon="@drawable/ic_interactions"
        android:title="@string/interactionCh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>